# pytest-better-parametrize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: main-pr-merge.yml  main-pr.yml
0.1/: 404.html  index.html  search.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  search.html
0.2/features/: index.html
0.2/search/: search_index.json
docs/: features.md  how-to.md  index.md  motivation.md  reference.md
src/pytest_better_parametrize/: __init__.py  core.py  plugin.py
temp/workflows/: main-pr-merge.yml
tests/: test_better_parametrize.py  test_core.py  test_logic.py
