[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-better-parametrize"
description = "Better description of parametrized test cases"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Robin Neville", email = "robin.m.neville@gmail.com" },
]
maintainers = [
    { name = "Robin Neville", email = "robin.m.neville@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "commitizen",
    "pre-commit",
    "pytest-cov",
]
[project.urls]
Repository = "https://github.com/binnev/pytest-better-parametrize"
[project.entry-points.pytest11]
django = "pytest_better_parametrize.plugin"


[tool.ruff]
line-length = 80

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "allow_settings_save: by default, Settings.save is mocked, so we don't create real files when running tests.",
]

[tool.coverage.run]
omit = ["*/__init__.py"]

